# NeuroBioSense_DL_Proj

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
demo/: app.py
emotion_recognition/: __init__.py
emotion_recognition/models/: __init__.py  attention_module.py  classifier.py  face_module.py  facenet_backbone.py  full_model.py  fusion_module.py  projection_head.py  signal_module.py
emotion_recognition/scripts/: __init__.py  check_data.py  generate_final_project_report.py  inference_realtime.py  predict_clip.py  run_binary_valence_suite.sh  run_final_project_suite.sh  run_overnight_suite.sh  train_face.py  train_metadata_valence.py  train_multimodal.py  train_signal.py
emotion_recognition/utils/: __init__.py  dataset.py  metrics.py  preprocessing.py  signal_processing.py
reports/: binary_valence_comparison.md  binary_valence_comparison.tex  final_project_report.md  final_project_report.tex  overnight_plan.md  report2.md
reports/diagrams/: architecture.mmd  data_pipeline.mmd
reports/latex_submission/: NeuroBioSense_Report.docx  package-lock.json  report.js  report_final.tex
scripts/: boost_accuracy.py  extract_face_embeddings.py  fusion_final.py  generate_graphs.py  quick_multimodal_nn.py  train_signal_valence.py
